[fix]#9787 align avatar ico

--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -360,7 +360,7 @@ nav.horizontal{
   }
 
   #my-photo{
-	margin-top: 8px;
+	margin-top: 10px;
 	vertical-align: 0;
   }
 }
